crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_cicd_pipeline.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
 ╭─CI──────────────────────────────────────╮
 │                                         │    pass
 │ ┌──────┐       ┌───────┐       ┌──────┐━┼━━━━━━━━━━━━▸┌────────┐
 │ │ Lint │━━━━━━▸│ Build │━━━━━━▸│ Test │ │    skip     │ Deploy │
 │ └──────┘       └───────┘       └──────┘┄┼┄┄┄┄┄┄┄┄┄┄┄┄▸└────────┘
 │                                         │
 ╰─────────────────────────────────────────╯
