crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_cicd_pipeline.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 80
expression: constrained
---
 ╭─CI──────────────────────────────────────╮
 │                                         │    pass
 │ ┌──────┐       ┌───────┐       ┌──────┐━┼━━━━━━━━━━━━▸┌────────┐
 │ │ Lint │━━━━━━▸│ Build │━━━━━━▸│ Test │ │    skip     │ Deploy │
 │ └──────┘       └───────┘       └──────┘┄┼┄┄┄┄┄┄┄┄┄┄┄┄▸└────────┘
 │                                         │
 ╰─────────────────────────────────────────╯
