crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_crossing_edges.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
┌───┐─────▸┌───┐
│ A │      │ C │
└───┘────┬▸└───┘
         ││
         ││
         ││
┌───┐────┼▸┌───┐
│ B │    │││ D │
└───┘────┘▸└───┘
