crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_crossing_edges.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 80
expression: constrained
---
┌───┐─────▸┌───┐
│ A │      │ C │
└───┘────┬▸└───┘
         ││
         ││
         ││
┌───┐────┼▸┌───┐
│ B │    │││ D │
└───┘────┘▸└───┘
