crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_diamond_branches.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
          ┌───────┐
          │ Start │
          └───────┘
              │
              │
              │
              │
              │
              │
              │
           ╱──▾──╲
           │ Ok? │
           ╲─────╱
             │ └───┐
             │     │
             │     │
         Yes │     │No
             │     │
             │     │
         ┌───┘     │
      ┌──▾─┐   ┌───▾──┐
      │ Go │   │ Stop │
      └────┘   └──────┘
