crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_diamond_branches.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 80
expression: constrained
---
          ┌───────┐
          │ Start │
          └───────┘
              │
              │
              │
              │
              │
              │
              │
           ╱──▾──╲
           │ Ok? │
           ╲─────╱
             │ └───┐
             │     │
             │     │
         Yes │     │No
             │     │
             │     │
         ┌───┘     │
      ┌──▾─┐   ┌───▾──┐
      │ Go │   │ Stop │
      └────┘   └──────┘
