crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_edge_crosses_subgraph.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
                       ╭─Services───────╮       ╭─Infra────────╮
                       │                │       │              │
                       │ ┌────────────┐─┼───────┼┐╭──────────╮ │
                       │▸│ API Server │ │       │▸│ ──────── │ │
                       ││└────────────┘─┼───────┼┐│ Postgres │ │
┌───────────────┐──────┼┘               │       ├▸╰──────────╯ │
│ Load Balancer │      │                │       ││             │
└───────────────┘──────┼┐               │       ││             │
                       ││┌────────┐─────┼───────┤│             │
                       │▸│ Worker │     │       ││╭───────╮    │
                       │ └────────┘│    │       │▸│ ───── │    │
                       │           │    │       │ │ Redis │    │
                       ╰───────────┴────╯───────┼▸╰───────╯    │
                                                │              │
                                                ╰──────────────╯
