crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_edge_crosses_subgraph.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 80
expression: constrained
---
                       ╭─Services───────╮       ╭─Infra────────╮
                       │                │       │              │
                       │ ┌────────────┐─┼───────┼┐╭──────────╮ │
                       │▸│ API Server │ │       │▸│ ──────── │ │
                       ││└────────────┘─┼───────┼┐│ Postgres │ │
┌───────────────┐──────┼┘               │       ├▸╰──────────╯ │
│ Load Balancer │      │                │       ││             │
└───────────────┘──────┼┐               │       ││             │
                       ││┌────────┐─────┼───────┤│             │
                       │▸│ Worker │     │       ││╭───────╮    │
                       │ └────────┘│    │       │▸│ ───── │    │
                       │           │    │       │ │ Redis │    │
                       ╰───────────┴────╯───────┼▸╰───────╯    │
                                                │              │
                                                ╰──────────────╯
