crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_edge_label_no_corner_adjacent.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
 ╭─Supervisor────────╮
 │┌─────────────────┐│
 ││┌───┐      ▸┌───┐││
 │││ A │──────┘│ B │││
 ││└─▴─┘      ▸└─┬─┘││
 │└──┘        │  ┴──┘│
 │ panics     │      │
 │    creates │      │
 │ ┌───┐      │      │
 │ │ C │──────┘      │
 │ └───┘             │
 │                   │
 ╰───────────────────╯
