crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_edge_label_no_corner_adjacent.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 80
expression: constrained
---
 ╭─Supervisor────────╮
 │┌─────────────────┐│
 ││┌───┐      ▸┌───┐││
 │││ A │──────┘│ B │││
 ││└─▴─┘      ▸└─┬─┘││
 │└──┘        │  ┴──┘│
 │ panics     │      │
 │    creates │      │
 │ ┌───┐      │      │
 │ │ C │──────┘      │
 │ └───┘             │
 │                   │
 ╰───────────────────╯
