crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_edge_styles.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 72
expression: natural
---
            ┌───┐
          ┌▸│ B │
          │ └───┘
          │
          │
          │
          │ ┌───┐
     ┌┄┄┄┄┼▸│ C │
     ┆    │ └───┘
     ┆    │
     ┆    │
     ┆    │
     ┆    │ ┌───┐
     ┆    │▸│ D │
     ┆    │┃└───┘
┌───┐└──labelled
│ A │━━━━━━┛
└───┘┏─────┐
    ┏┫     │┌───┐
    ┃┆     ▸│ E │
    ┃┆      └───┘
    ┃┆
    ┃┆
    ┃┆
    ┃┆      ┌───┐
dashed label│ F │
    ┃       └───┘
    ┃
    ┃
    ┃
thick label ┌───┐
    ┗━━━━━━▸│ G │
            └───┘
