crates/mermaid-text/tests/regression_corpus/snapshots/flowchart_edge_styles.width80.snap
---
source: crates/mermaid-text/tests/regression_corpus.rs
assertion_line: 80
expression: constrained
---
            ┌───┐
          ┌▸│ B │
          │ └───┘
          │
          │
          │
          │ ┌───┐
     ┌┄┄┄┄┼▸│ C │
     ┆    │ └───┘
     ┆    │
     ┆    │
     ┆    │
     ┆    │ ┌───┐
     ┆    │▸│ D │
     ┆    │┃└───┘
┌───┐└────┘┃
│ A │┏━━━━━┛
└───┘┣┄┄┄┄┄┐
     ┃     ┆┌───┐
labelled───▸│ E │
     ┃     ┆└───┘
     ┃     ┆
dashed label
     ┃     ┆
     ┃     ┆┌───┐
     ┃     ▸│ F │
     ┃      └───┘
     ┃
     ┃
     ┃
thick label ┌───┐
     ┗━━━━━▸│ G │
            └───┘
